Fix overlapsing footer and list item.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,7 @@
     padding: 15px 15px;
   }
   
-  @media(max-width:800px){
+  @media only screen and (max-width:800px){
     .content {
       width:100vw;
     }
@@ -171,7 +171,7 @@
     border-radius: 20px;
   }
 
-  @media(max-width:800px){
+  @media only screen and (max-width:800px){
     .thumbnail-single img{
       width:100vw;
       border-radius: 0px;
@@ -233,7 +233,7 @@
     display: none;
   }
 
-  @media(max-width:800px){
+  @media only screen and (max-width:800px){
     header{
       flex-direction: row;
       flex-basis: 50%;
@@ -333,7 +333,7 @@
     min-height: 50vh;
   }
 
-  @media(max-width:800px){
+  @media only screen and (max-width:800px){
     #banner{
       font-size: 150%;
     }
@@ -369,6 +369,10 @@
 
   .list-item + img{
     border-radius: 20px;
+  }
+
+  .list-item:last-child {
+    margin-bottom: 30vh;
   }
 
   .list-grid > div {
@@ -423,7 +427,7 @@
   }
 
 
-  @media(max-width:800px){
+  @media only screen and (max-width:800px){
     .overlay {
       position: relative;
       top: -50%;
@@ -502,7 +506,7 @@
     visibility: hidden;
   } 
 
-  @media(max-width:800px){
+  @media only screen and (max-width:800px){
     .pagination {
       bottom: 0;
       margin-top: 50vh;
@@ -534,7 +538,7 @@
     background-color: #f8c8a1;
   }
 
-  @media(max-width:800px){
+  @media only screen and (max-width:800px){
     .postfooter {
       bottom: 0;
       font-size: 2.5vw;
@@ -590,12 +594,13 @@
     cursor: pointer;
     color: #fff;
   }
-  @media(max-width: 800px){
+  @media only screen and (max-width: 800px){
     footer {
       position: relative;
       padding: 80px 15px;
       bottom: 0;
       width: 100vw;
+      margin-top: 10vh;
     }
   }
   
